[package]
name = "locenv-macros"
version = "0.2.0"
description = "A collection of macros to aid on module development for locenv"
repository = "https://github.com/locenv/mdl-rust"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
